[package]
name = "sphero-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.16.0"
futures = "0.3.28"
uuid = "1.4.0"

[dev-dependencies]
btleplug = "0.11.0"
tokio =  { version = "1", features = ["full"] }
